# sanitarium.se

./: .banner-cache  .editorconfig  .gitignore  .tool-versions  CLAUDE.md  Gemfile  Gruntfile.js  Makefile  README.md  TODO  _config.yml  _rasterize.js  docker-compose.ci.yaml  docker-compose.once.yaml  docker-compose.yaml  feed.xml  hugo.toml  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  webfinger
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.ci.yaml  docker-compose.yaml
.github/: dependabot.yml
_drafts/: environment-variables-that-affects-gems.md  lowering-your-cognitive-load.md  programming-is-all-about-language.md  when-your-intranet-is-like-the-internet.md
_includes/: footer.html  head.html  nav.html
_layouts/: banner.html  page.html  post.html  presentation.html
_plugins/: banner_creator.rb  definition_tag.rb  img.rb
_posts/: 2010-02-21-how-to-disable-bold-fonts-in-xterm.markdown  2010-12-04-howto-satta-upp-en-wikileaksspegling.markdown  2010-12-05-howto-setting-up-a-wikileaks-mirror.markdown  2011-01-07-keeping-your-varnish-farm-in-sync.markdown  2013-01-18-python-and-its-included-batteries.markdown  2015-10-27-testing-multiple-versions-of-python-on-snap-ci.md  2015-11-14-how-to-ping-a-lost-apple-watch.md  2022-02-05-sticky-blocks-in-roam.md  2024-02-01-how-to-make-docker-resume-layer-downloads.md  2024-04-15-day-to-day-automation-using-alfred.md  2025-05-03-effective-meetings.md
_redesign/: minimal.css  post.html
archetypes/: blog.md  crumb.md  default.md  link.md  scrap.md  til.md
content/: _index.md  (+5 more)
(+291 files in other folders)
