[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml==6.0.2",
    "python-frontmatter>=1.1.0",
    "python-dateutil>=2.8.0",
]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "check-jsonschema>=0.33.2",
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "freezegun>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "isort>=6.0.1",
    "black>=25.1.0",
]

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.setuptools.package-dir]
"" = "src/py"
